--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; https://nxt-square.com/pages/wi-fly-japan" />
+    <meta http-equiv="refresh" content="0; https://shop.nxtsq.com/products/nxt-wifi-rental" />
     <title>Redirecting...</title>
   </head>
   <body>
